--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -732,7 +732,7 @@
                                                 <td class="text-right" data-title="Cart" >
                                                     <span><%= product.total %></span>
                                                 </td>
-                                                <td class="action" data-title="Remove"><a href="/gadgetly/removefromcart/?id=<%=product.productId._id %>" class="text-muted"><i class="fi-rs-trash"></i></a></td>
+                                                <td class="action" data-title="Remove"><a href="/gadgetly/removefromcart/?id=<%=product.productId._id %>" class="text-muted rmv-btn" productId="<%=product.productId._id %>"><i class="fi-rs-trash"></i></a></td>
                                             </tr>
                                        <% })
                                     }else{ %>
@@ -811,8 +811,8 @@
                             </table>
                         </div>
                         <div class="cart-action text-end">
-                            <a class="btn  mr-10 mb-sm-15"><i class="fi-rs-shuffle mr-10"></i>Update Cart</a>
-                            <a class="btn "><i class="fi-rs-shopping-bag mr-10"></i>Continue Shopping</a>
+                            <a class="btn  mr-10 mb-sm-15" href="/gadgetly/cart"><i class="fi-rs-shuffle mr-10"></i>Update Cart</a>
+                            <a class="btn " href="/gadgetly/shop"><i class="fi-rs-shopping-bag mr-10"></i>Continue Shopping</a>
                         </div>
                         <div class="divider center_icon mt-50 mb-50"><i class="fi-rs-fingerprint"></i></div>
                         <div class="row mb-50">
@@ -1288,9 +1288,38 @@
     <script src="/assets/js/plugins/isotope.js"></script>
     <script src="/assets/js/plugins/scrollup.js"></script>
     <script src="/assets/js/plugins/jquery.vticker-min.js"></script>
+    <!-- sweet alert cdn -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Template  JS -->
     <script src="/assets/js/main.js"></script>
     <script src="/assets/js/shop.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            console.log("dom loaded")
+            const removeFromCartButton = document.querySelectorAll('.rmv-btn');
+            console.log("cart button accesssed")
+            removeFromCartButton.forEach(function (button) {
+                button.addEventListener('click', async function (event) {
+                    event.preventDefault();
+                    const productId = this.getAttribute('productId');
+                    console.log('productId', productId);
+                    const response = await fetch(`/gadgetly/removefromcart/?id=${productId}`, {
+                        method: 'GET'
+                    });
+                    const productData = await response.json();
+                    console.log('productdata', productData);
+                    if (productData.success) {
+                        console.log("success");                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
+                        swal.fire({
+                            icon: 'success',
+                            title: 'Removed From Cart',
+                            text: 'The product has been removed from the cart'
+                        });
+                    }
+                });
+            });
+        });
+    </script>
 </body>
 
 
